syntax = "proto3";

option csharp_namespace = "GrpcService";

package todoit;

service ToDoItService {
  // create
  rpc CreateToDo (CreateToDoRequest) returns (CreateToDoResponse){}
  
  // read one
  rpc ReadOneToDo (ReadToDoRequest) returns (ReadToDoResponse){}
  
  // read all
  rpc ReadAllToDo (ReadAllRequest) returns (ReadAllResponse) {}
  
  // update
  rpc UpdateTodo (UpdateToDoRequest) returns (UpdateToDoResponse){}
  
  // delete
  rpc DeleteToDo (DeleteToDoRequest) returns (DeleteToDoResponse) {}
}

message CreateToDoRequest {
  string title = 1;
  string description = 2;
}

message CreateToDoResponse {
  int32 id = 1;
}

message ReadToDoRequest {
  int32 id = 1;
}

message ReadToDoResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  ToDoStatus to_do_status = 4;
}

message ReadAllRequest {
  
}

message ReadAllResponse {
  repeated ReadToDoResponse todos = 1;
}

message UpdateToDoRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  ToDoStatus to_do_status = 4;
}

message UpdateToDoResponse {
  int32 id = 1;
}

message DeleteToDoRequest {
  int32 id = 1;
}

message DeleteToDoResponse {
  int32 id = 1;
}

enum ToDoStatus {
    NotStarted = 0;
    InProgress = 1;
    Completed = 2;
    Cancelled = 3;
    Blocked = 4;
    Deferred = 5;
    Scheduled = 6;
    InReview = 7;
    AwaitingApproval = 8;
}